# job_task_questions

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/migrations/: env.py
app/migrations/versions/: c0d921515e31_first_revision.py
app/questions/: dao.py  models.py  question_api.py  router.py  schemas.py
docker/: app.sh
postgres-data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
