[tool.poetry]
name = "job-task-questions"
version = "0.1.0"
description = ""
authors = ["leanpilled <yulya_9@hotmail.com>"]
readme = "README.md"
# packages = [{include = "job_task_questions"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
asyncio = "^3.4.3"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
pydantic = "^2.4.2"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
